# chess-bench

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/chess_bench/: cli.py  elo.py  game.py  match.py  prompts.py  registry.py  tournament.py
src/chess_bench/players/: __init__.py  base.py  llm.py
tests/: test_cli.py  test_elo.py  test_game.py  test_import.py  test_match.py  test_players_base.py  test_players_llm.py  test_prompts.py  test_registry.py  test_tournament.py
